# class-teachers-awards

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
class_teacher_awards/: config.py  main.py
class_teacher_awards/data_extraction/: eml_parser.py  excel_parser.py
class_teacher_awards/llm/: alias_generator.py  message_generator.py
class_teacher_awards/utils/: file_utils.py
tests/data_extraction/: test_eml_parser.py  test_excel_parser.py
tests/llm/: test_alias_generator.py  test_message_generator.py
